fix overflow style for title in css

--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -31,6 +31,7 @@ form {
      margin-right: 10px;
      resize: none;
      outline: none;
+     overflow: hidden;
 }
 
  .nameField {
